arreglado crud basico

--- a/src/app/admin/config-site/config-site.component.html
+++ b/src/app/admin/config-site/config-site.component.html
@@ -6,15 +6,15 @@
                 <h4 class="card-title">Editar conf</h4>
                 <h6 class="card-subtitle">Ajustes</h6>
                 <button class="btn btn-outline-danger" href="javascript:void(0)" (click)="goBack()">Volver</button>
-                <form class="form p-t-20" [formGroup]="confGeneralForm" (submit)="updateConfiguracion()">
+                <form class="form p-t-20 form-horizontal form-material" [formGroup]="confGeneralForm" (submit)="updateConfiguracion()">
                     <div class="form-group">
                         <label for="select-input">Language</label>
-                        <select class="form-control custom-select" formControlName="language" required>
-      <option selected  value="">Seleccione</option>
-      <option  value="en">English</option>
-      <option  value="es">Español</option>
+                        <select class="form-control " formControlName="language" required>
+                            <option disabled  value="">Seleccione</option>
+                            <option  value="en">English</option>
+                            <option  value="es">Español</option>
 
-  </select>
+                        </select>
                     </div>
                     <div class="form-group">
                         <label for="exampleInputuname">Razón social</label>
@@ -31,9 +31,9 @@
                         </div>
                     </div>
 
-                    <div class="form-group row align-items-center">
+                    <div class="form-group ">
                         <label class="col-form-label font-weight-medium" for="text-input">Telefonos</label>
-                        <div class="col-md-10">
+                        <div class="col-md-12">
                             <div class="row">
                                 <div class="col">
                                     <input class="form-control" type="number" placeholder="Telefono 1" formControlName="telefono_uno">
@@ -45,9 +45,9 @@
 
                         </div>
                     </div>
-                    <div class="form-group row align-items-center">
+                    <div class="form-group ">
                         <label class="col-form-label font-weight-medium" for="text-input">Correos</label>
-                        <div class="col-md-10">
+                        <div class="col-md-12">
                             <div class="row">
                                 <div class="col">
                                     <input class="form-control" type="email" placeholder="Email 1" formControlName="email_uno">
@@ -60,106 +60,94 @@
                         </div>
                     </div>
 
-                    <div class="form-group row">
+                    <div class="form-group ">
                         <label class="col-form-label font-weight-medium" for="textarea-input">Dirección</label>
-                        <div class="col-md-10">
-                            <textarea class="form-control" id="textarea-input" rows="3" placeholder="Dirección de la tienda." formControlName="direccion"></textarea>
+                        <div class="col-md-12">
+                            <ckeditor [editor]="Editor" formControlName="direccion" data="<p>Hello, world!</p>" required></ckeditor>
                         </div>
                     </div>
 
-                    <div class="form-group row">
+                    <div class="form-group ">
                         <label class="col-form-label font-weight-medium" for="textarea-input">Horarios</label>
-                        <div class="col-md-10">
+                        <div class="col-md-12">
                             <textarea class="form-control" id="textarea-input" rows="2" placeholder="Horarios de atención." formControlName="horarios"></textarea>
                         </div>
                     </div>
 
-                    <div class="form-group row">
+                    <div class="form-group ">
                         <label class="col-form-label font-weight-medium" for="textarea-input">Mapa (iframe)</label>
-                        <div class="col-md-10">
+                        <div class="col-md-12">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <textarea class="form-control" id="textarea-input" rows="6" placeholder="Código de google maps." formControlName="iframe_mapa"></textarea>
-                                </div>
-                                <div class="col-md-12" id="content-mapa">
-
+                                    <textarea class="form-control" id="textarea-input" placeholder="Código de google maps." formControlName="iframe_mapa"></textarea>
                                 </div>
                             </div>
                         </div>
                     </div>
 
-                    <div class="form-group row align-items-center">
-                        <label class="col-form-label font-weight-medium" for="text-input">Facebook</label>
-                        <div class="input-group col-md-10 input-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text">
-                            <i class="czi-facebook"></i>
-                          </span>
-                            </div>
-                            <input class="form-control" type="text" placeholder="Enlace de pagina en facebook" formControlName="facebook">
+                    <div class="form-group ">
+                        <label class="col-form-label font-weight-medium" for="text-input"> <i class="czi-facebook"></i> Facebook</label>
+                        <div class="input-group col-md-12 input-group">
+                            <input class="form-control" type="text" placeholder="Enlace de pagina" formControlName="facebook">
                         </div>
                     </div>
-                    <div class="form-group row align-items-center">
-                        <label class="col-form-label font-weight-medium" for="text-input">Instagram</label>
-                        <div class="col-md-10 input-group ">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text">
-                            <i class="czi-instagram"></i>
-                          </span>
-                            </div>
-                            <input class="form-control" type="text" placeholder="Enlace de pagina en instagram" formControlName="instagram">
+                    <div class="form-group ">
+                        <label class="col-form-label font-weight-medium" for="text-input"><i class="czi-instagram"></i> Instagram</label>
+                        <div class="col-md-12 input-group ">
+                            <input class="form-control" type="text" placeholder="Enlace de pagina " formControlName="instagram">
                         </div>
                     </div>
-                    <div class="form-group row align-items-center">
-                        <label class="col-form-label font-weight-medium" for="text-input">Youtube</label>
-                        <div class="col-md-10 input-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text">
-                            <i class="czi-youtube"></i>
-                          </span>
-                            </div>
-                            <input class="form-control" type="text" placeholder="Enlace de pagina en instagram" formControlName="youtube">
+                    <div class="form-group ">
+                        <label class="col-form-label font-weight-medium" for="text-input"> <i class="czi-youtube"></i> Youtube</label>
+                        <div class="col-md-12 input-group">
+                            <input class="form-control" type="text" placeholder="Enlace de pagina " formControlName="youtube">
                         </div>
                     </div>
-                    <div class="form-group row align-items-center">
-                        <label class="col-form-label font-weight-medium" for="text-input">Twitter</label>
-                        <div class="col-md-10 input-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text">
-                            <i class="czi-twitter"></i>
-                          </span>
-                            </div>
-                            <input class="form-control" type="text" placeholder="Enlace de pagina en instagram" formControlName="twitter">
+                    <div class="form-group ">
+                        <label class="col-form-label font-weight-medium" for="text-input"> <i class="czi-twitter"></i> Twitter</label>
+
+                        <div class="col-md-12 input-group">
+                            <input class="form-control" type="text" placeholder="Enlace de pagina " formControlName="twitter">
                         </div>
                     </div>
-                    <div class="form-group row align-items-center">
+
+                    <div class="form-group ">
                         <div class="col-lg-6">
                             <div class="form-group">
                                 <label for="select-input">Modo Sandbox?</label>
-                                <select class="form-control custom-select" formControlName="modoPaypal">
-                            <option selected disabled value="">SELECCIONAR</option>
-                            <option  [value]="true">Activo</option>
-                            <option  [value]="false">Inactivo</option>
+                                <select class="form-control " formControlName="modoPaypal">
+                                    <option  disabled value="">SELECCIONAR</option>
+                                    <option  [value]="true">Activo</option>
+                                    <option  [value]="false">Inactivo</option>
 
-                        </select>
+                                </select>
+
+                                <!-- <div class="form-check">
+                                    <input class="form-check-input" type="radio" formControlName="modoPaypal" id="exampleRadios1" value="true">
+                                    <label class="form-check-label" for="exampleRadios1">Activo</label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" formControlName="modoPaypal" id="exampleRadios2" value="false">
+                                    <label class="form-check-label" for="exampleRadios2">Inactivo</label>
+                                </div> -->
                             </div>
                         </div>
                     </div>
-                    <div class="form-group row">
+                    <div class="form-group ">
                         <label class="col-form-label font-weight-medium" for="textarea-input">Cliente Paypal</label>
-                        <div class="col-md-10">
+                        <div class="col-md-12">
                             <textarea class="form-control" id="textarea-input" rows="3" placeholder="CLiente id paypal." formControlName="clientePaypal"></textarea>
                         </div>
                     </div>
-                    <div class="form-group row">
+                    <div class="form-group ">
                         <label class="col-form-label font-weight-medium" for="textarea-input">Sandbox Paypal</label>
-                        <div class="col-md-10">
+                        <div class="col-md-12">
                             <textarea class="form-control" id="textarea-input" rows="3" placeholder="Sandbox paypal." formControlName="sandbox"></textarea>
                         </div>
                     </div>
-                    <div class="form-group row">
+                    <div class="form-group ">
                         <label class="col-form-label font-weight-medium" for="textarea-input">Rapid Api</label>
-                        <div class="col-md-10">
+                        <div class="col-md-12">
                             <input class="form-control" type="text" placeholder="Rapid api key" formControlName="rapidapiKey">
                         </div>
                     </div>
@@ -172,13 +160,13 @@
             </div>
         </div>
     </div>
-    <div class="col-md-6" *ngIf="congeneralSeleccionado">
+    <div class="col-md-6" *ngIf="congeneral">
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">imagen</h4>
                 <h6 class="card-subtitle">Logo</h6>
                 <div class="text-center">
-                    <img *ngIf="!imgTemp" [src]="congeneralSeleccionado.logo | imagenPipe: 'congenerals'  " class="img-responsive img-thumbnail" alt="">
+                    <img *ngIf="!imgTemp" [src]="congeneral.img | imagenPipe: 'congenerals'  " class="img-responsive img-thumbnail" alt="">
                     <img *ngIf="imgTemp" [src]="imgTemp" class="img-avatar">
                 </div>
                 <input type="file" (change)="cambiarImagen($event.target.files[0])">
@@ -194,7 +182,7 @@
                 <h4 class="card-title">Favicon</h4>
                 <h6 class="card-subtitle">Logo de navegador</h6>
                 <div class="text-center">
-                    <img *ngIf="!imgTemp1" [src]="congeneralSeleccionado.favicon | imagenPipe: 'congenerals'  " class="img-responsive img-thumbnail" alt="">
+                    <img *ngIf="!imgTemp1" [src]="congeneral.favicon | imagenPipe: 'congenerals'  " class="img-responsive img-thumbnail" alt="">
                     <img *ngIf="imgTemp1" [src]="imgTemp1" class="img-avatar">
                 </div>
                 <input type="file" (change)="cambiarImagen1($event.target.files[0])">
