--- a/src/app/admin/slider/slideredit/slideredit.component.html
+++ b/src/app/admin/slider/slideredit/slideredit.component.html
@@ -6,33 +6,33 @@
                 <h4 class="card-title">{{pageTitle}}</h4>
                 <h6 class="card-subtitle">Ajustes</h6>
                 <button class="btn btn-outline-danger" href="javascript:void(0)" (click)="goBack()">Volver</button>
-                <form [formGroup]="sliderForm" (ngSubmit)="onSubmit(sliderForm)">
+                <form [formGroup]="sliderForm" (ngSubmit)="onSubmit(sliderForm)" class="form-horizontal form-material">
                     <div class="card border-0 box-shadow">
 
                         <div class="card-body">
                             <div class="tab-content" style="margin-top: 20px;">
                                 <div class="tab-pane fade active show">
-                                    <div class="form-group row align-items-center">
+                                    <div class="form-group ">
                                         <label class="col-md-3 col-form-label font-weight-medium" for="text-input">Titulo</label>
-                                        <div class="col-md-9">
+                                        <div class="col-md-12">
                                             <input class="form-control" type="text" placeholder="Nombre del producto" formControlName="first_title">
                                         </div>
                                     </div>
-                                    <div class="form-group row align-items-center">
+                                    <div class="form-group ">
                                         <label class="col-md-3 col-form-label font-weight-medium" for="text-input">Sub título</label>
-                                        <div class="col-md-9">
+                                        <div class="col-md-12">
                                             <input class="form-control" type="text" placeholder="Titulo superior" formControlName="subtitulo">
                                         </div>
                                     </div>
-                                    <div class="form-group row align-items-center">
+                                    <div class="form-group ">
                                         <label class="col-md-3 col-form-label font-weight-medium" for="text-input">Enlace <span class="required">*</span></label>
-                                        <div class="col-md-9">
+                                        <div class="col-md-12">
                                             <input class="form-control" type="text" placeholder="enlace" formControlName="enlace" required>
                                         </div>
                                     </div>
-                                    <div class="form-group row align-items-center">
+                                    <div class="form-group ">
                                         <label class="col-md-3 col-form-label font-weight-medium" for="text-input">Estado</label>
-                                        <div class="col-md-9">
+                                        <div class="col-md-12">
                                             <div class="custom-control custom-checkbox">
                                                 <input class="custom-control-input" formControlName="status" type="checkbox" id="ex-check-01">
                                                 <label class="custom-control-label" *ngIf="slider.status" for="ex-check-01">Activo</label>
@@ -41,9 +41,9 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="form-group row align-items-center">
+                                    <div class="form-group ">
                                         <label class="col-md-3 col-form-label font-weight-medium" for="text-input">Target</label>
-                                        <div class="col-md-9">
+                                        <div class="col-md-12">
                                             <div class="custom-control custom-checkbox">
                                                 <input class="custom-control-input" formControlName="target" type="checkbox" id="ex-check-1">
                                                 <label class="custom-control-label" *ngIf="slider.target" for="ex-check-1">Self</label>
@@ -52,30 +52,28 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="form-group row align-items-center">
+                                    <div class="form-group ">
                                         <label class=" col-form-label font-weight-medium" for="text-input">status <span class="required">*</span></label>
-                                        <div class="col-md-10">
+                                        <div class="col-md-12">
                                             <div class="row">
                                                 <div class="col-lg-6">
                                                     <div class="form-group">
                                                         <label for="select-input">Visible</label>
-                                                        <select class="form-control custom-select" formControlName="mostrarInfo" required>
-                                              <option selected  value="">SELECCIONAR</option>
-                                              <option  [value]="true">Activo</option>
-                                              <option  [value]="false">Inactivo</option>
-
-                                          </select>
+                                                        <select class="form-control " formControlName="mostrarInfo" required>
+                                                            <option disabled  value="">SELECCIONAR</option>
+                                                            <option  [value]="true">Activo</option>
+                                                            <option  [value]="false">Inactivo</option>
+                                                        </select>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-6">
                                                     <div class="form-group">
                                                         <label for="select-input">Destacado?</label>
-                                                        <select class="form-control custom-select" formControlName="mostrarboton">
-                                                    <option selected disabled value="">SELECCIONAR</option>
-                                                    <option  [value]="true">Activo</option>
-                                              <option  [value]="false">Inactivo</option>
-
-                                                </select>
+                                                        <select class="form-control " formControlName="mostrarboton">
+                                                          <option disabled value="">SELECCIONAR</option>
+                                                          <option  [value]="true">Activo</option>
+                                                          <option  [value]="false">Inactivo</option>
+                                                        </select>
                                                     </div>
                                                 </div>
 
@@ -87,7 +85,7 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <button class="btn btn-primary mb-2 mr-1" type="submit">Actualizar campos</button>
+                            <button class="btn btn-success waves-effect waves-light m-r-10 btn-block" type="submit"><i class="fa fa-save"></i> Guardar cambios</button>
                         </div>
                     </div>
                 </form>
