--- a/src/app/pages/account-setting/account-setting.component.html
+++ b/src/app/pages/account-setting/account-setting.component.html
@@ -26,37 +26,47 @@
             </div>
         </div>
     </div>
-    <div class="col-6 card" *ngFor="let conf of congenerals">
+</div>
+<div class="container">
+    <div class="card">
+        <div *ngFor="let conf of congenerals">
 
-        <a [routerLink]="['/dashboard/configuracion/edit', conf._id]" class="cursor" data-toggle="tooltip" data-original-title="Edit"> <i class="fa fa-pencil text-inverse m-r-10"></i> Edit</a>
-
-        <ul>
-            <li><b>Título:</b> {{conf.titulo}}</li>
-            <li><b>CR:</b> {{conf.cr}}</li>
-            <li><b>Teléfono uno:</b> {{conf.telefono_uno}}</li>
-            <li><b>Teléfono dos:</b> {{conf.telefono_dos}}</li>
-            <li><b>Email uno:</b> {{conf.email_uno}}</li>
-            <li><b>Email dos:</b> {{conf.email_dos}}</li>
-            <li><b>Dirección:</b> {{conf.direccion}}</li>
-            <li><b>Horarios:</b>{{conf.horarios}}</li>
-            <li><b>iframe_mapa (ubicación):</b>
+            <div class="pull-right mt-3 mr-3 mb-3">
+                <button class="btn btn-primary" [routerLink]="['/dashboard/configuracion/edit', conf._id]">
+                <i class="fa fa-pencil"></i> Editar
+              </button>
+            </div>
+            <div class="clear"></div>
+            <hr>
+            <div class="col-xs-12 col-sm-6" style="float:left;">
+                <p><b>Título:</b> {{conf.titulo}}</p>
+                <p><b>CR:</b> {{conf.cr}}</p>
+                <p><b>Teléfono uno:</b> {{conf.telefono_uno}}</p>
+                <p><b>Teléfono dos:</b> {{conf.telefono_dos}}</p>
+                <p><b>Email uno:</b> {{conf.email_uno}}</p>
+                <p><b>Email dos:</b> {{conf.email_dos}}</p>
+                <p><b>Dirección:</b> {{conf.direccion}}</p>
+                <p><b>Horarios:</b>{{conf.horarios}}</p>
+                <p><b><i class="fa fa-facebook"></i> Facebook:</b> {{conf.facebook}}</p>
+                <p><b><i class="fa fa-instagram"></i> Instagram:</b> {{conf.instagram}}</p>
+                <p><b><i class="fa fa-youtube-play"></i> Youtube:</b> {{conf.youtube}}</p>
+                <p><b><i class="fa fa-twitter"></i> Twitter:</b> {{conf.twitter}}</p>
+                <p><b>Modo Paypal Sandbox (modo de pruebas):</b></p>
+                <span class="badge badge-success badge-shadow" *ngIf="conf.modoPaypal == true">{{conf.modoPaypal}}</span>
+                <span class="badge badge-primary badge-shadow" *ngIf="conf.modoPaypal == false">{{conf.modoPaypal}}</span>
+                <p><b>Sandbox:</b> {{conf.sandbox}}</p>
+                <p><b>Cliente Paypal ID:</b> {{conf.clientePaypal}}</p>
+                <p><b>Rapid Api Key:</b> {{conf.rapidapiKey}}</p>
+            </div>
+            <div class="col-xs-12 col-sm-6" style="float:left;">
+                <p><b>iframe_mapa (ubicación):</b></p>
                 <iframe class="mapa" [src]="getMapIframe(conf.iframe_mapa)" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; " allowfullscreen></iframe>
 
-            </li>
-            <li><b>Facebook:</b> {{conf.facebook}}</li>
-            <li><b>Instagram:</b> {{conf.instagram}}</li>
-            <li><b>Youtube:</b> {{conf.youtube}}</li>
-            <li><b>Twitter:</b> {{conf.twitter}}</li>
-            <li><b>Linkedin</b> {{conf.linkedin}}</li>
-            <li><b>Logo:</b> {{conf.logo}}</li>
-            <li><b>Favicon:</b> {{conf.favicon}}</li>
-            <li><b>Modo Paypal Sandbox (pruebas):</b> {{conf.modoPaypal}}</li>
-            <li><b>Sandbox:</b> {{conf.sandbox}}</li>
-            <li><b>Cliente Paypal ID:</b> {{conf.clientePaypal}}</li>
-            <li><b>Rapid Api Key:</b> {{conf.rapidapiKey}}</li>
-        </ul>
+                <p><b>Logo:</b></p>
+                <img [src]="conf.img | imagenPipe: 'congenerals'" style="width: 150px; margin-left: 10px; " class="img-responsive img-thumbnail" alt="">
+                <p><b>Favicon:</b></p>
+                <img [src]="conf.favicon | imagenPipe: 'congenerals'" style="width: 150px; margin-left: 10px;" class="img-responsive img-thumbnail" alt="">
+            </div>
+        </div>
     </div>
-
-
-
 </div>
