--- a/src/app/admin/blog/blog-edit/blog-edit.component.html
+++ b/src/app/admin/blog/blog-edit/blog-edit.component.html
@@ -6,37 +6,37 @@
                 <h4 class="card-title">{{pageTitle}}</h4>
                 <h6 class="card-subtitle">Ajustes</h6>
                 <button class="btn btn-outline-danger" href="javascript:void(0)" (click)="goBack()">Volver</button>
-                <form class="form p-t-20" [formGroup]="blogForm" (submit)="updateBlog()">
+                <form class="form p-t-20 form-horizontal form-material" [formGroup]="blogForm" (submit)="updateBlog()">
                     <div class="form-group">
-                        <label for="exampleInputuname">Titulo Categoria <span class="required">*</span></label>
+                        <label for="exampleInputuname">Título<span class="required">*</span></label>
                         <div class="input-group">
 
                             <input type="text" formControlName="titulo" class="form-control" id="exampleInputuname" placeholder="titulo" required>
                         </div>
                     </div>
-                    <div class="form-group row align-items-center">
+                    <div class="form-group ">
                         <label class=" col-form-label font-weight-medium" for="text-input">Descripción <span class="required">*</span></label>
-                        <div class="col-md-10">
+                        <div class="col-md-12">
 
                             <ckeditor [editor]="Editor" formControlName="descripcion" data="<p>Hello, world!</p>" required></ckeditor>
                         </div>
                     </div>
-                    <div class="form-group row align-items-center">
+                    <div class="form-group ">
                         <label class=" col-form-label font-weight-medium" for="text-input">video de youtube</label>
-                        <div class="col-md-10">
+                        <div class="input-group">
                             <input type="text" formControlName="video_review" class="form-control" id="exampleInputuname" placeholder="Codigo de insercion de vídeo">
                         </div>
                     </div>
 
 
-                    <div class="form-group row align-items-center">
+                    <div class="form-group ">
                         <div class="col-md-10">
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <label for="select-input">Categoría <span class="required">*</span></label>
-                                        <select class="form-control custom-select" formControlName="categoria" required>
-                                          <option selected  value="">SELECCIONAR</option>
+                                        <select class="form-control " formControlName="categoria" required>
+                                          <option disabled  value="">SELECCIONAR</option>
                                           <option *ngFor="let item of listCategorias" [value]="item._id">{{item.nombre}}</option>
 
                                       </select>
@@ -45,8 +45,8 @@
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <label for="select-input">Destacado?</label>
-                                        <select class="form-control custom-select" formControlName="isFeatured">
-                                    <option selected disabled value="">SELECCIONAR</option>
+                                        <select class="form-control " formControlName="isFeatured">
+                                    <option  disabled value="">SELECCIONAR</option>
                                     <option  [value]="true">Activo</option>
                                     <option  [value]="false">Inactivo</option>
 
