--- a/src/app/admin/categoria/cat-edit/cat-edit.component.html
+++ b/src/app/admin/categoria/cat-edit/cat-edit.component.html
@@ -6,7 +6,7 @@
                 <h4 class="card-title">{{pageTitle}}</h4>
                 <h6 class="card-subtitle">Ajustes</h6>
                 <button class="btn btn-outline-danger" href="javascript:void(0)" (click)="goBack()">Volver</button>
-                <form class="form p-t-20" [formGroup]="categoriaForm" (submit)="updateCategoria()">
+                <form class="form p-t-20 form-horizontal form-material" [formGroup]="categoriaForm" (submit)="updateCategoria()">
                     <div class="form-group">
                         <label for="exampleInputuname">Titulo Categoria</label>
                         <div class="input-group">
@@ -16,29 +16,23 @@
                     </div>
                     <div class="form-group">
                         <label for="exampleInputsubcategorias">Subcategoría</label>
-                        <div class="input-group">
 
-                            <input type="text" formControlName="subcategorias" class="form-control" id="exampleInputsubcategorias" placeholder="subcategorias">
+                        <div class="col-12">
+                            <ckeditor [editor]="Editor" formControlName="subcategorias" data="<p>Hello, world!</p>" required></ckeditor>
                         </div>
                     </div>
-                    <div class="form-group form-row">
-                        <label class="col-md-3">Mostrar en slide</label>
-                        <div class="col-sm-4">
-                            <div class="form-check">
-                                <label class="custom-control custom-radio">
-                                  <input id="radio1" formControlName="state_banner" type="radio" value="true" class="custom-control-input">
-                                  <span class="custom-control-indicator"></span>
-                                  <span class="custom-control-description">Activo</span>
-                              </label>
-                            </div>
-                            <div class="form-check">
-                                <label class="custom-control custom-radio">
-                                  <input id="radio2" formControlName="state_banner" type="radio" value="false" class="custom-control-input">
-                                  <span class="custom-control-indicator"></span>
-                                  <span class="custom-control-description">Desactivado</span>
-                              </label>
-                            </div>
+
+
+                    <div class="form-group ">
+                        <label class=" col-form-label font-weight-medium" for="text-input">Mostrar en slide</label>
+                        <div class="input-group">
+                            <select class="form-control" formControlName="state_banner">
+                            <option  disabled value="">SELECCIONAR</option>
+                            <option  [value]="true">Activo</option>
+                            <option  [value]="false">Inactivo</option>
+                          </select>
                         </div>
+
                     </div>
 
 
