--- a/src/app/admin/contacto/contacto.component.html
+++ b/src/app/admin/contacto/contacto.component.html
@@ -1,4 +1,4 @@
-<section class="col-lg-8 pt-lg-4 mb-3">
+<section>
     <div class="pt-2 px-4 pl-lg-0 pr-xl-5">
         <div class="row">
 
@@ -13,35 +13,65 @@
 
                 </div>
                 <div class="row">
-                    <div class="col-lg-12 form-group" *ngFor="let item of mensajes |  paginate: { itemsPerPage: count, currentPage: p }">
+
+                    <div class="col-md-6 col-lg-6 col-xlg-4" *ngFor="let item of mensajes |  paginate: { itemsPerPage: count, currentPage: p }">
+
                         <div class="card">
                             <div class="card-body">
-                                <a (click)="eliminarMensaje(item)" class="cursor" data-toggle="tooltip" data-original-title="Borrar"> <i class="fa fa-close text-danger"></i> </a>
-                                <div class="media pb-4"><img class="rounded-circle" width="50" src="../../../../assets/images/user.png">
-                                    <div class="media-body pl-3">
-                                        <h6 class="font-size-md mb-2">{{item.nombres}}</h6>
-                                        <h6 class="font-size-md mb-2 text-accent">Tema: {{item.tema}}</h6>
-                                        <p class="font-size-md mb-1 text-justify">{{item.mensaje}}</p>
+                                <div class="d-flex">
+                                    <h4 class="card-title"><span class="lstick"></span>Mail:
                                         <span class="font-size-ms text-muted">
-                                  <i class="czi-phone align-middle mr-2"></i>
-                                  {{item.telefono}}
-                                </span><br>
-                                        <span class="font-size-ms text-muted">
-                                  <i class="czi-wechat align-middle mr-2"></i>
-                                  {{item.correo}}
-                                </span><br>
-                                        <span class="font-size-ms text-muted">
-                                    <i class="czi-time align-middle mr-2"></i>
-                                    {{item.createdAt|date :'MMM d, y, h:mm:ss a'}}
-                                  </span>
+                                      <i class="czi-time align-middle mr-2"></i>
+                                      {{item.createdAt|date :'MMM d, y, h:mm:ss a'}}
+                                    </span></h4>
+                                    <!-- <span class="badge badge-success">9</span> -->
+                                    <div class="btn-group ml-auto m-t-10">
+                                        <a href="JavaScript:void(0)" class="icon-options-vertical link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
+                                        <div class="dropdown-menu dropdown-menu-right" x-placement="bottom-end" style="position: absolute; transform: translate3d(-184px, 32px, 0px); top: 0px; left: 0px; will-change: transform;">
+                                            <a class="dropdown-item" href="javascript:void(0)">Leer</a>
+                                            <a class="dropdown-item" href="javascript:void(0)" (click)="eliminarMensaje(contacto)">Eliminar</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="activity-box">
+                                <div class="card card-body">
+
+                                    <div class="row">
+                                        <div class="col-md-4 col-lg-3 text-center">
+                                            <a href="app-contact-detail.html"><img src="../assets/images/users/1.jpg" alt="user" class="img-circle img-responsive"></a>
+                                        </div>
+                                        <div class="col-md-8 col-lg-9">
+                                            <h3 class="box-title m-b-0">{{item.nombres}}</h3> <small>Tema: {{item.tema}}</small>
+                                            <address>
+                                  <p class="font-size-md mb-1 ">{{item.mensaje}}</p>
+                                    <br>
+                                    <br>
+                                    <span class="font-size-ms text-muted">
+                                      <i class="czi-phone align-middle mr-2"></i>
+                                      {{item.telefono}}
+                                    </span><br>
+                                            <span class="font-size-ms text-muted">
+                                      <i class="czi-wechat align-middle mr-2"></i>
+                                      {{item.correo}}
+                                    </span>
+
+                                </address>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+
+
+
                     </div>
-                    <div class="col-lg-12">
-                        <pagination-controls (pageChange)="p = $event"></pagination-controls>
-                    </div>
+
+
+
+                </div>
+                <div class="col-lg-12">
+                    <pagination-controls (pageChange)="p = $event"></pagination-controls>
                 </div>
             </div>
         </div>
