--- a/src/app/admin/curso/video-edit/video-edit.component.html
+++ b/src/app/admin/curso/video-edit/video-edit.component.html
@@ -6,7 +6,7 @@
                 <h4 class="card-title">{{pageTitle}}</h4>
                 <h6 class="card-subtitle">Ajustes</h6>
                 <button class="btn btn-outline-danger" href="javascript:void(0)" (click)="goBack()">Volver</button>
-                <form class="form p-t-20" [formGroup]="videoForm" (submit)="updateCurso()">
+                <form class="form p-t-20 form-horizontal form-material" [formGroup]="videoForm" (submit)="updateCurso()">
                     <div class="form-group">
                         <label for="exampleInputuname">Titulo</label>
                         <div class="input-group">
