--- a/src/app/admin/proucto/prod-edit/prod-edit.component.html
+++ b/src/app/admin/proucto/prod-edit/prod-edit.component.html
@@ -6,125 +6,123 @@
                 <h4 class="card-title">{{pageTitle}}</h4>
                 <h6 class="card-subtitle">Ajustes</h6>
                 <button class="btn btn-outline-danger" href="javascript:void(0)" (click)="goBack()">Volver</button>
-                <form class="form p-t-20" [formGroup]="productoForm" (submit)="updateProducto()">
+                <form class="form p-t-20 form-horizontal form-material" [formGroup]="productoForm" (submit)="updateProducto()">
                     <div class="form-group">
-                        <label for="exampleInputuname">Titulo <span class="required">*</span> </label>
+                        <label for="exampleInputuname">Título <span class="required">*</span> </label>
                         <div class="input-group">
 
                             <input type="text" formControlName="titulo" class="form-control" id="exampleInputuname" placeholder="titulo" required>
                         </div>
                     </div>
-                    <div class="form-group row align-items-center">
+                    <div class="form-group ">
                         <label class=" col-form-label font-weight-medium" for="text-input">Descripción <span class="required">*</span></label>
-                        <div class="col-md-10">
+                        <div class="col-md-12">
                             <ckeditor [editor]="Editor" formControlName="detalle" data="<p>Hello, world!</p>" required></ckeditor>
 
                         </div>
                     </div>
-                    <div class="form-group row">
+                    <div class="form-group ">
                         <label class=" col-form-label font-weight-medium" for="textarea-input">Descripción corta <span class="required">*</span></label>
-                        <div class="col-md-10">
+                        <div class="col-md-12">
                             <ckeditor [editor]="Editor1" formControlName="info_short" data="<p>Hello, world!</p>" required></ckeditor>
                         </div>
                     </div>
-                    <div class="form-group row align-items-center">
+                    <div class="form-group ">
                         <label class=" col-form-label font-weight-medium" for="text-input">video de youtube </label>
-                        <div class="col-md-10">
+                        <div class="col-md-12">
                             <input type="text" formControlName="video_review" class="form-control" id="exampleInputuname" placeholder="Codigo de insercion de vídeo.">
 
                         </div>
                     </div>
 
 
-                    <div class="form-group row align-items-center">
+                    <div class="form-group ">
                         <label class=" col-form-label font-weight-medium" for="text-input">Detalles Valor <span class="required">*</span></label>
-                        <div class="col-md-10">
+                        <div class="col-md-12">
                             <div class="row">
                                 <div class="col-lg-4">
+                                    <label class=" col-form-label font-weight-medium">Stock <span class="required">*</span></label>
                                     <input class="form-control" type="number" placeholder="Stock del producto" formControlName="stock" min="0" required>
                                 </div>
                                 <div class="col-lg-4">
+                                    <label class=" col-form-label font-weight-medium">Precio Actual <span class="required">*</span></label>
                                     <input class="form-control" type="number" placeholder="Precio actual" formControlName="precio_ahora" min="0" required>
                                 </div>
                                 <div class="col-lg-4">
+                                    <label class=" col-form-label font-weight-medium">Precio Antes <span class="required">*</span></label>
                                     <input class="form-control" type="number" placeholder="Precio antes" formControlName="precio_antes" min="0" required>
                                 </div>
                             </div>
                         </div>
                     </div>
 
-                    <div class="form-group row align-items-center">
+                    <div class="form-group ">
                         <label class=" col-form-label font-weight-medium" for="text-input">Categorías </label>
-                        <div class="col-md-10">
+                        <div class="col-md-12">
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <label for="select-input">Categoría <span class="required">*</span></label>
-                                        <select class="form-control custom-select" formControlName="categoria" required>
-                          <option selected  value="">SELECCIONAR</option>
-                          <option *ngFor="let item of listCategorias" [value]="item._id">{{item.nombre}}</option>
+                                        <select class="form-control " formControlName="categoria" required>
+                                            <option disabled  value="">SELECCIONAR</option>
+                                            <option *ngFor="let item of listCategorias" [value]="item._id">{{item.nombre}}</option>
 
-                      </select>
+                                        </select>
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <label for="select-input">Subcategoría</label>
-                                        <select class="form-control custom-select" formControlName="subcategoria">
-                          <option selected disabled value="">SELECCIONAR</option>
-                          <option *ngFor="let item of listCategorias" [value]="item.subcategorias">{{item.subcategorias}}</option>
+                                        <select class="form-control " formControlName="subcategoria">
+                                            <option  disabled value="">SELECCIONAR</option>
+                                            <option *ngFor="let item of listCategorias" [value]="item.subcategorias">{{item.subcategorias}}</option>
 
-                      </select>
+                                        </select>
                                     </div>
                                 </div>
 
                             </div>
                         </div>
                     </div>
-                    <div class="form-group row align-items-center">
-                        <div class="col-lg-6">
+                    <div class="form-group ">
+                        <div class="col-lg-12">
                             <div class="form-group">
                                 <label for="select-input">Destacado?</label>
-                                <select class="form-control custom-select" formControlName="isFeatured">
-                              <option selected disabled value="">SELECCIONAR</option>
-                              <option  [value]="1">Activo</option>
-                              <option  [value]="0">Inactivo</option>
-
-                          </select>
+                                <select class="form-control " formControlName="isFeatured">
+                                  <option disabled value="">SELECCIONAR</option>
+                                  <option  [value]="true">Activo</option>
+                                  <option  [value]="false">Inactivo</option>
+                                </select>
                             </div>
                         </div>
                     </div>
 
-                    <div class="form-group row align-items-center">
-                        <label class=" col-form-label font-weight-medium" for="text-input">Marca <span class="required">*</span></label>
-                        <div class="col-md-10">
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <select class="form-control custom-select" id="select-input" formControlName="marca" required>
-                      <option selected disabled value="">SELECCIONAR</option>
-                      <option *ngFor="let item of listMarcas" [value]="item._id">{{item.nombre}}</option>
+                    <div class="form-group ">
+                        <div class="col-lg-12">
+                            <label class=" col-form-label font-weight-medium" for="text-input">Marca <span class="required">*</span></label>
+                            <div class="input-group">
+                                <select class="form-control " id="select-input" formControlName="marca" required>
+                                  <option  disabled value="">SELECCIONAR</option>
+                                  <option *ngFor="let item of listMarcas" [value]="item._id">{{item.nombre}}</option>
 
-                  </select>
-                                </div>
-                                <div class="col-lg-6">
-                                    <span class="text-muted">Selecciona la <b>MARCA</b></span>
-                                </div>
-
+                                </select>
                             </div>
                         </div>
                     </div>
 
-                    <div class="form-group row align-items-center">
-                        <label class="col-md-2 col-form-label font-weight-medium" for="text-input">Tipo <span class="required">*</span></label>
-                        <div class="col-md-10">
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <input class="form-control" type="text" placeholder="Nombre del selector" formControlName="nombre_selector" min="0">
-                                </div>
-                                <div class="col-lg-6">
-                                    <span class="text-muted">Por ejemplo: Para calzados el selector es <b>TALLAS</b></span>
-                                </div>
+                    <div class="form-group ">
+                        <div class="col-lg-12">
+                            <label class="col-form-label font-weight-medium" for="text-input">Tipo <span class="required">*</span></label>
+                            <div class="col-md-12">
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <input class="form-control" type="text" placeholder="Nombre del selector" formControlName="nombre_selector" min="0">
+                                    </div>
+                                    <div class="col-lg-12">
+                                        <span class="text-muted">Por ejemplo: Para calzados el selector es <b>TALLAS</b></span>
+                                    </div>
 
+                                </div>
                             </div>
                         </div>
                     </div>
